--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -1,9 +1,41 @@
-@INPROCEEDINGS{2025PDCb,
-    author = {Steven R. Chesley and Rahil Makadia and David Herald and Davide Farnocchia and Shantanu P. Naidu and Alexandros Siakas and Damya Souami and Paolo Tanga and Sotirios Tsavdaridis and Kleomenis Tsiganis},
-    title = "{The post-DART heliocentric orbit of Didymos and implications for the effectiveness of the DART impact}",
-    booktitle = "{9th IAA Planetary Defense Conference}",
+@INPROCEEDINGS{2025BAM,
+    author = {Rahil Makadia and Steven R. Chesley and Siegfried Eggl},
+    title = "{Deflecting binary asteroids: Future considerations highlighted by the Didymos system’s heliocentric deflection after DART}",
+    booktitle = "{Binaries in the Solar System VI}",
     year = 2025,
-    month = may,
+    month = sep,
+}
+
+@INPROCEEDINGS{2025EPSCDPS,
+    author = {Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Siegfried Eggl},
+    title = "{Keyhole-Based Site Selection for Kinetic Impact Deflection of Near-Earth Asteroids}",
+    booktitle = "{Europlanet Science Congress - Division of Planetary Sciences Joint Meeting 2025}",
+    year = 2025,
+    month = sep,
+}
+
+@INPROCEEDINGS{2025EPSCDPSb,
+    author = {Steven R. Chesley and Rahil Makadia and others},
+    title = "{First detection of an asteroid’s heliocentric deflection: The Didymos system after DART}",
+    booktitle = "{Europlanet Science Congress - Division of Planetary Sciences Joint Meeting 2025}",
+    year = 2025,
+    month = sep,
+}
+
+@INPROCEEDINGS{2025EPSCDPSc,
+    author = {Paolo Tanga and others},
+    title = "{Stellar occultations by Near Earth Asteroids: challenges and results}",
+    booktitle = "{Europlanet Science Congress - Division of Planetary Sciences Joint Meeting 2025}",
+    year = 2025,
+    month = sep,
+}
+
+@INPROCEEDINGS{2025EPSCDPSd,
+    author = {Pedro H. Bernardinelli and others},
+    title = "{Layup: Orbit fitting at LSST Scale}",
+    booktitle = "{Europlanet Science Congress - Division of Planetary Sciences Joint Meeting 2025}",
+    year = 2025,
+    month = sep,
 }
 
 @INPROCEEDINGS{2025PDC,
@@ -12,11 +44,21 @@
     booktitle = "{9th IAA Planetary Defense Conference}",
     year = 2025,
     month = may,
+    url = {https://iaa.4hdt.ro/event/1/contributions/201/contribution.pdf},
+}
+
+@INPROCEEDINGS{2025PDCb,
+    author = {Steven R. Chesley and Rahil Makadia and others},
+    title = "{The post-DART heliocentric orbit of Didymos and implications for the effectiveness of the DART impact}",
+    booktitle = "{9th IAA Planetary Defense Conference}",
+    year = 2025,
+    month = may,
+    url = {https://iaa.4hdt.ro/event/1/contributions/33/contribution.pdf},
 }
 
 @INPROCEEDINGS{2025Hera,
     author = {Rahil Makadia and Steven R. Chesley and David Herald and Davide Farnocchia and Shantanu P. Naidu and Alexandros Siakas and Damya Souami and Paolo Tanga and Sotirios Tsavdaridis and Kleomenis Tsiganis},
-    title = "{First estimate of the heliocentric changes in the Didymos system after the DART impact}",
+    title = "{First detection of the Didymos system's heliocentric orbit changes after the DART impact}",
     booktitle = "{April 2025 Hera Team Meeting}",
     year = 2025,
     month = apr,
