--- a/pdfs/cv/pub_invited.bib
+++ b/pdfs/cv/pub_invited.bib
@@ -1,3 +1,27 @@
+@INPROCEEDINGS{2025APLAsteroidDay,
+    author = {Rahil Makadia},
+    title = "{Didymos after DART: How the Binary Asteroid System Changed after the Deflection}",
+    booktitle = "{Johns Hopkins University Applied Physics Laboratory Asteroid Day Celebration}",
+    year = 2025,
+    month = jun,
+}
+
+@INPROCEEDINGS{2025APLMDNAV,
+    author = {Rahil Makadia},
+    title = "{Keyhole Mapping: The Next Step in Designing Kinetic Impact Missions for Near-Earth Asteroids}",
+    booktitle = "{Johns Hopkins University Applied Physics Laboratory Mission Design and Navigation Seminar}",
+    year = 2025,
+    month = jun,
+}
+
+@INPROCEEDINGS{2025ISSDAY,
+    author = {Rahil Makadia},
+    title = "{Planetary Defense: A brief overview of the field and my research}",
+    booktitle = "{1st Annual Illinois Space Society Day}",
+    year = 2025,
+    month = apr,
+}
+
 @INPROCEEDINGS{2024ARCS,
     author = {Rahil Makadia},
     title = "{Planetary Defense: How we (and I) got here, What we’re doing, and Where we’re going...}",
