--- a/pdfs/cv/pub_journal.bib
+++ b/pdfs/cv/pub_journal.bib
@@ -1,38 +1,60 @@
-@article{Makadia2025c,
-	author = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
-	journal = {Celestial Mechanics and Dynamical Astronomy},
-	title = {{A Novel Method for Computing State Transition Matrices due to the Unscented Transform}},
+@article{Makadia2025e,
+	author = {Makadia, Rahil and Chesley, Steven R. and Farnocchia, Davide and Barbee, Brent W. and Eggl, Siegfried},
+	title = "{Keyhole-Aware Deflection Site Selection for Kinetic Impact Missions at Near-Earth Asteroids}",
+	journal = {Icarus},
 	year = {2025},
-	volume = {Under review},
-	publisher = {Springer},
+	volume = {Submitted},
+}
+
+@article{Makadia2025d,
+	author = {Makadia, Rahil and Chesley, Steven R. and others},
+	title = "{First detection of an asteroid’s heliocentric deflection: The Didymos system after DART}",
+	year = {2025},
+	volume = {Submitted},
+}
+
+@article{Makadia2025c,
+	author = {Makadia, Rahil and Farnocchia, Davide and Chesley, Steven R. and Eggl, Siegfried},
+	journal = {Celestial Mechanics and Dynamical Astronomy},
+	title = "{A novel method for computing state transition matrices due to the unscented transform}",
+	year = {2025},
+	volume = {137},
+	doi = {10.1007/s10569-025-10247-1},
+	isbn = {1572-9478},
+	number = {3},
+	pages = {18},
 }
 
 @article{Makadia2025b,
-	author = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
-	journal = {Journal of Open Source Software},
-	title = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
+	doi = {10.3847/PSJ/adbc88},
+	url = {https://dx.doi.org/10.3847/PSJ/adbc88},
 	year = {2025},
-	volume = {Under review},
-	publisher = {The Open Journal},
-	% doi = {10.21105/joss.07488},
-	% url = {https://doi.org/10.21105/joss.07488},
-	url = {https://github.com/openjournals/joss-reviews/issues/7488},
-	number = {0},
-	pages = {1-3},
+	month = {04},
+	publisher = {The American Astronomical Society},
+	volume = {6},
+	number = {4},
+	pages = {85},
+	author = {Makadia, Rahil and Farnocchia, Davide and Chesley, Steven R. and Eggl, Siegfried},
+	title = "{Gauss-Radau Small-body Simulator (GRSS): An Open-source Library for Planetary Defense}",
+	journal = {The Planetary Science Journal},
 }
 
 @article{Makadia2025,
-	author    = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
-	journal   = {The Planetary Science Journal},
-	title     = {{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}},
-	year      = {2025},
-	volume    = {In Press},
-	publisher = {The American Astronomical Society},
+	author = {Rahil Makadia and Davide Farnocchia and Steven R. Chesley and Siegfried Eggl},
+	journal = {Journal of Open Source Software},
+	title = "{Gauss-Radau Small-body Simulator (GRSS): An Open-Source Library for Planetary Defense}",
+	year = {2025},
+	volume = {10},
+	publisher = {The Open Journal},
+	doi = {10.21105/joss.07861},
+	url = {https://doi.org/10.21105/joss.07861},
+	number = {107},
+	pages = {7861},
 }
 
 @article{Hirabayashi2025,
 	author={Hirabayashi, Masatoshi and Raducan, Sabina D. and Sunshine, Jessica M. and Farnham, Tony L. and Deshapriya, J. D. P. and Li, Jian-Yang and Tancredi, Gonzalo and Chesley, Steven R. and Daly, R. Terik and Ernst, Carolyn M. and Gai, Igor and Hasselmann, Pedro H. and Naidu, Shantanu P. and Nair, Hari and Palmer, Eric E. and Waller, C. Dany and Zinzi, Angelo and Agrusa, Harrison F. and Barbee, Brent W. and Syal, Megan Bruck and Collins, Gareth S. and Davison, Thomas M. and DeCoster, Mallory E. and Jutzi, Martin and Kumamoto, Kathryn M. and Moskovitz, Nicholas A. and Lyzhoft, Joshua R. and Schwartz, Stephen R. and Abell, Paul A. and Barnouin, Olivier S. and Chabot, Nancy L. and Cheng, Andrew F. and Dotto, Elisabetta and Fahnestock, Eugene G. and Michel, Patrick and Richardson, Derek C. and Rivkin, Andrew S. and Stickle, Angela M. and Thomas, Cristina A. and Beccarelli, Joel and Brucato, John R. and Dall'Ora, Massimo and Corte, Vincenzo Della and Epifani, Elena Mazzotta and Ieva, Simone and Impresario, Gabriele and Ivanovski, Stavro and Lucchetti, Alice and Modenini, Dario and Pajola, Maurizio and Palumbo, Pasquale and Pirrotta, Simone and Poggiali, Giovanni and Rossi, Alessandro and Tortora, Paolo and Tusberti, Filippo and Zannoni, Marco and Zanotti, Giovanni and Ferrari, Fabio and Glenar, David A. and Herreros, Isabel and Jacobson, Seth A. and Karatekin, {\"O}zg{\"u}r and Lazzarin, Monica and Lolachi, Ramin and Lucas, Michael P. and Makadia, Rahil and Marzari, Francesco and Merrill, Colby C. and Migliorini, Alessandra and Nakano, Ryota and Orm{\"o}, Jens and S{\'a}nchez, Paul and Senel, Cem Berk and Soldini, Stefania and Stubbs, Timothy J.},
-	title={Elliptical ejecta of asteroid Dimorphos is due to its surface curvature},
+	title="{Elliptical ejecta of asteroid Dimorphos is due to its surface curvature}",
 	journal={Nature Communications},
 	year={2025},
 	month={02},
@@ -54,7 +76,7 @@
 	number = {8},
 	pages = {182},
 	author = {Derek C. Richardson and Harrison F. Agrusa and Brent Barbee and Rachel H. Cueva and Fabio Ferrari and Seth A. Jacobson and Rahil Makadia and Alex J. Meyer and Patrick Michel and Ryota Nakano and Yun Zhang and Paul Abell and Colby C. Merrill and Adriano Campo Bagatin and Olivier Barnouin and Nancy L. Chabot and Andrew F. Cheng and Steven R. Chesley and R. Terik Daly and Siegfried Eggl and Carolyn M. Ernst and Eugene G. Fahnestock and Tony L. Farnham and Oscar Fuentes-Muñoz and Edoardo Gramigna and Douglas P. Hamilton and Masatoshi Hirabayashi and Martin Jutzi and Josh Lyzhoft and Riccardo Lasagni Manghi and Jay McMahon and Fernando Moreno and Naomi Murdoch and Shantanu P. Naidu and Eric E. Palmer and Paolo Panicucci and Laurent Pou and Petr Pravec and Sabina D. Raducan and Andrew S. Rivkin and Alessandro Rossi and Paul Sánchez and Daniel J. Scheeres and Peter Scheirich and Stephen R. Schwartz and Damya Souami and Gonzalo Tancredi and Paolo Tanga and Paolo Tortora and Josep M. Trigo-Rodríguez and Kleomenis Tsiganis and John Wimarsson and Marco Zannoni},
-	title = {{The Dynamical State of the Didymos System before and after the DART Impact}},
+	title = "{The Dynamical State of the Didymos System before and after the DART Impact}",
 	journal = {The Planetary Science Journal},
 }
 
@@ -82,7 +104,7 @@
 	number = {2},
 	pages = {38},
 	author = {Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Shantanu P. Naidu and Damya Souami and Paolo Tanga and Kleomenis Tsiganis and Masatoshi Hirabayashi and Siegfried Eggl},
-	title = {{Measurability of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}},
+	title = "{Measurability of the Heliocentric Momentum Enhancement from a Kinetic Impact: The Double Asteroid Redirection Test (DART) Mission}",
 	journal = {The Planetary Science Journal},
 }
 
