--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -29,15 +29,15 @@
 %%% make all authors with last name Makadia and given name Rahil bold
 % last name
 \renewcommand{\mkbibnamefamily}[1]{%
-    % if last name is Makadia or first name is Rahil, make it bold
-    \ifboolexpr{test {\ifdefstring{\namepartfamily}{Makadia}} and test {\ifdefstring{\namepartgiven}{Rahil}}}
+    % if last name is Makadia, make it bold
+    \ifboolexpr{test {\ifdefstring{\namepartfamily}{Makadia}}}
     {\textbf{#1}}
     {#1}
 }
 % first name
 \renewcommand{\mkbibnamegiven}[1]{%
-    % if last name is Makadia or first name is Rahil, make it bold
-    \ifboolexpr{test {\ifdefstring{\namepartfamily}{Makadia}} and test {\ifdefstring{\namepartgiven}{Rahil}}}
+    % if first name is Rahil, make it bold
+    \ifboolexpr{test {\ifdefstring{\namepartgiven}{Rahil}}}
     {\textbf{#1}}
     {#1}
 }
@@ -82,32 +82,45 @@
 
 \begin{document}
 
-\ifphone
-\hspace{\myspacing}\huge{\bf Rahil Makadia} \hfill \large{Cell: \input{phone.num}}
-\else
-\hspace{\myspacing}\huge{\bf Rahil Makadia}
-\fi
+\hspace{\myspacing}
+\hspace{2.2in}
+\huge{\bf Rahil Makadia}
 
 \normalsize
 \begin{resume}
 
 \section{\sc Contact Information}
-104 S Wright St., 307 Talbot Lab \hfill \href{mailto:makadia2@illinois.edu}{makadia2@illinois.edu}\\
-Urbana, IL 61801 \hfill \href{https://rahil-makadia.github.io/}{https://rahil-makadia.github.io}
+104 S Wright St., 307 Talbot Lab \hfill
+\ifphone
+\input{phone.num} \textbar\,
+\fi
+\href{mailto:makadia2@illinois.edu}{makadia2@illinois.edu}\\
+Urbana, IL 61801 \hfill
+\href{https://rahil-makadia.github.io/}{https://rahil-makadia.github.io}
+
+\section{\sc Objective Statement}
+Imminent Ph.D. graduate in Aerospace Engineering from UIUC with a focus on solar system dynamics and planetary defense. Seeking the next professional chapter to leverage my skills in orbit determination and trajectory analysis.
 
 \section{\sc Education}
-{\bf University of Illinois at Urbana-Champaign}\hfill Urbana, IL\\
+{\bf University of Illinois at Urbana-Champaign (UIUC)}\hfill Urbana, IL\\
 Ph.D. in Aerospace Engineering \hfill {01/21 - 12/25}\\
 Advisor: Siegfried Eggl\\
-Committee: Steven Chesley, Bruce Conway, Davide Farnocchia, Raluca Ilie\\
+Committee: Steven Chesley, Davide Farnocchia, Bruce Conway, Raluca Ilie\\
 Dissertation: Improvements to the Design and Modeling of Kinetic Impact Missions for Deflecting Near-Earth Asteroids
 
 {\bf University of Illinois at Urbana-Champaign}\hfill Urbana, IL\\
 B.S. in Aerospace Engineering with Honors \hfill {08/17 - 12/20}
 
 \section{\sc Work Experience}
+{\bf NASA Goddard Space Flight Center} \hfill Greenbelt, MD\\
+Visiting Technologist \hfill 05/25 - 07/25\\
+Advisors: Brent Barbee, Kenneth Getzandanner
+\begin{list_new}
+    \item Leveraged proven mission analysis tools to design kinetic impact missions.
+    \item Validated kinetic impact mission trajectories for mapping gravitational keyholes on the surface of (101955) Bennu.
+\end{list_new}
 {\bf NASA Jet Propulsion Laboratory (JPL)} \hfill Pasadena, CA\\
-Visiting Technologist / NSTGRO Fellow \hfill 05/23 - 08/23, 03/24 - 06/24\\
+Visiting Technologist \hfill 05/23 - 08/23, 03/24 - 06/24\\
 Advisors: Steven Chesley, Davide Farnocchia
 \begin{list_new}
     \item Validated an efficient orbit propagator with sub\,-1\,km position accuracy over 250 years compared to JPL's internal software.
@@ -115,13 +128,13 @@ Advisors: Steven Chesley, Davide Farnocchia
     \item Tested a publicly available Python package, \textsc{grss}, to allow the scientific community to accurately propagate and compute the orbits of solar system objects such as asteroids and comets.
     \item Implemented ability to compute locations of gravitational keyholes, which are predictors of future asteroid impacts with Earth.
 \end{list_new}
-{\bf NASA Goddard Space Flight Center (GSFC)} \hfill Greenbelt, MD\\
+{\bf NASA Goddard Space Flight Center} \hfill Greenbelt, MD\\
 OSIRIS-REx/OSIRIS-APEX CelNav Intern \hfill 06/22 - 08/22\\
 Advisors: Kenneth Getzandanner, Andrew Liounis
 \begin{list_new}
-    \item Developed simulations to assess performance of Celestial Navigation (CelNav) using onboard cameras during the OSIRIS-APEX cruise phase.
-    \item Simulated more than 8,000 planets/moons/asteroids to obtain optimal observable areas for the spacecraft.
-    \item Performed covariance analyses using MONTE to study the spacecraft's state uncertainty on its way to asteroid (99942) Apophis.
+    \item Developed simulations to assess performance of onboard Celestial Navigation (CelNav) during the cruise phase of NASA's OSIRIS-APEX mission.
+    \item Simulated more than 8,000 planets/moons/asteroids to obtain optimal observation areas for the spacecraft on the celestial sphere.
+    \item Performed covariance analyses using JPL's Monte library to study the spacecraft's state uncertainty on its way to asteroid (99942) Apophis.
 \end{list_new}
 
 \section{\sc Research Experience}
@@ -129,24 +142,26 @@ Advisors: Kenneth Getzandanner, Andrew Liounis
 Advisor: Siegfried Eggl \hfill 01/21 - 12/25\\
 NASA's Double Asteroid Redirection Test (DART) Mission
 \begin{list_new}
-    \item Analyzed high-fidelity kinetic impactor simulation results from NASA's Jet Propulsion Laboratory (JPL) for impacts in the (65803) Didymos binary asteroid system.
-    \item Implemented a novel method to impart momentum changes in the Didymos system after the DART impact.
+    \item Analyzed high-fidelity kinetic ejecta dynamics simulation results from JPL for impacts in the (65803) Didymos binary asteroid system.
+    \item Implemented a novel method to model momentum changes in the Didymos system after the DART impact.
     \item Generated updated B-plane maps to conclude that the Didymos system will not collide with the Earth after the DART impact.
-    \item Wrote MATLAB and Python parameter estimation packages to assess measurability of the heliocentric momentum enhancement from the DART impact.
+    \item Built MATLAB and Python parameter estimation packages to assess measurability of the heliocentric momentum enhancement from the DART impact.
+    \item Leveraged high-precision stellar occultation measurements in 2024 and 2025 to measure the heliocentric changes in an asteroid's orbit for the first time in human history.
 \end{list_new}
 Keyhole-aware Deflection Site Selection for Asteroids
 \begin{list_new}
-    \item Developed a novel method to select deflection sites on asteroids that minimize the probability of future Earth impacts.
+    \item Developed a novel method to select deflection sites on asteroids while minimizing the probability of future Earth impacts.
+    \item Modeled the effects of billions of kinetic impact deflections on an asteroid's orbit using Monte Carlo simulations with a Fortran foundation.
     \item Created impact probability maps on the surface of different asteroid shapes to directly compare the safety of available deflection sites.
-    \item Applied new method to a theoretical kinetic impactor mission design for asteroid (101955) Bennu to avoid triggering keyholes between 2178-2200.
+    \item Applied the new method to a theoretical kinetic impactor mission design for asteroid (101955) Bennu that would avoid triggering future Earth impacts.
 \end{list_new}
 Gauss-Radau Small-body Simulator (\textsc{grss})
 \begin{list_new}
-    \item Developed a high-accuracy propagator for asteroids and comets based on the \texttt{RADAU} and \texttt{IAS15} integrators.
-    \item Built an orbit determination code for estimating small body orbits using optical and radar observations.
-    \item Released an open-source Python library with a C++ binding for use by the planetary defense community.
+    \item Implemented a high-accuracy propagator for asteroids and comets based on the \texttt{RADAU} and \texttt{IAS15} integrators.
+    \item Developed an orbit determination code for estimating small body orbits using optical and radar observations.
+    \item Released an open-source Python library with a C++ core codebase for use by the planetary defense community.
 \end{list_new}
-State Transition Matrices (STMs) using the Unscented Transform
+State Transition Matrices (STMs) via the Unscented Transform
 \begin{list_new}
     \item Extended the proven unscented transform formalism to compute the STM in addition to posterior distributions.
     \item Novel STMs do not require time-consuming partial derivatives or problem-specific finite difference steps, enabling more robust implementation.
@@ -160,29 +175,12 @@ Venus Aerogravity Assist Performance Assessment
     \item Assessed the performance of blunt-body vehicles and waveriders using MATLAB for varying trajectories and vehicle configurations.
 \end{list_new}
 
-\section{\sc Teaching Experience}
-{\bf University of Illinois at Urbana-Champaign} \hfill Urbana, IL\\
-Instructor: Siegfried Eggl \hfill 08/21 - 12/21\\
-Teaching Assistant for AE 352: Aerospace Dynamical Systems
-\begin{list_new}
-    \item Assisted in developing and teaching the curriculum's core dynamics course with aerospace applications.
-    \item Covered Newtonian, Lagrangian, and Hamiltonian mechanics for rigid body motion.
-    \item Advised 16 student teams with Project Clear Constellation, focusing on new methods to remove orbital debris.
-\end{list_new}
-{\bf University of Illinois at Urbana-Champaign} \hfill Urbana, IL\\
-Instructor: Huy Tran \hfill 01/20 - 05/20\\
-Undergraduate Course Assistant for AE 199: Aerospace Computing
-\begin{list_new}
-    \item Assisted with grading for a new course focused on using Python to solve problems such as analyzing air traffic data and designing Martian landers.
-    \item Worked with instructor to augment course for a fully online learning environment without affecting students due to the COVID-19 pandemic.
-\end{list_new}
-
 \section{\sc Skills}
-{\bf Programming Languages:} Python, C/C++, Fortran, MATLAB, R/RStudio
+{\bf Programming Languages:} Python, C/C++, Fortran, MATLAB, R/RStudio, Perl
 \vspace{\myitemspacing}\newline
 {\bf Software Tools:} \LaTeX, Git
 \vspace{\myitemspacing}\newline
-{\bf Prepackaged Tools:} SPICE, MONTE, FreeFlyer, GMAT
+{\bf Prepackaged Tools:} SPICE, Monte, FreeFlyer, GMAT
 \vspace{\myitemspacing}\newline
 {\bf Operating Systems:} MacOS, Linux, Windows
 \vspace{\myitemspacing}\newline
@@ -195,8 +193,14 @@ NSTGRO fellowship from NASA Space Technology Mission Directorate
 {\bf ARCS Foundation Scholar Award} \hfill 08/23 - 12/25\\
 Achievement Rewards for College Scientists (ARCS) Illinois Chapter
 \vspace{\myitemspacing}\newline
+{\bf 1\textsuperscript{st} Place -- Student Research Competition} \hfill 05/25\\
+9\textsuperscript{th} IAA Planetary Defense Conference
+\vspace{\myitemspacing}\newline
 {\bf Alumni Advisory Board Fellowship} \hfill 04/25\\
 UIUC Aerospace Engineering Department
+\vspace{\myitemspacing}\newline
+{\bf Conference Presentation Award} \hfill 04/25\\
+UIUC Graduate College
 \vspace{\myitemspacing}\newline
 {\bf Best Visual Poster Award} \hfill 02/24\\
 UIUC Aerospace Engineering Department
@@ -219,12 +223,53 @@ University of Illinois at Urbana-Champaign
 {\bf Hans von Muldau Team Award for Best Project} \hfill 10/19\\
 70\textsuperscript{th} International Astronautical Congress
 
-\section{\sc Professional Activities and Affiliations}
-{\bf DART Investigation Team Member}\\
-NASA Double Asteroid Redirection Test (DART) Mission Science Team
+\section{\sc Publications}
+\csuse{entrycount:1} Journal Articles\\
+\csuse{entrycount:2} Conference and Meeting Proceedings\\
+\csuse{entrycount:3} Invited Seminars and/or Public Talks
 
-{\bf Hera Investigation Team Extended Member}\\
-ESA Hera Mission Science Team
+\section{\sc Research Grants}
+{\bf NASA Space Technology Graduate Research Fellowship}
+\begin{list_new}
+    \item Title: \href{https://techport.nasa.gov/projects/118462}{Keyhole-Based Impact Site Selection and Post-Deflection Impact Risk Assessment for Near-Earth Objects}
+    \item Funding Institution: NASA Space Technology Mission Directorate
+    \item Amount: \$332,000
+    \item Role: Co-Investigator (PI: Siegfried Eggl)
+    \item Period of Performance: 08/22 - 12/25
+\end{list_new}
+
+{\bf LSST LINCC Frameworks Incubator}
+\begin{list_new}
+    \item Title: \href{https://lsstdiscoveryalliance.org/programs/lincc-frameworks/incubator-awardees/#holman}{Orbit Fitting at LSST Scale}
+    \item Funding Institution: Vera C. Rubin Observatory
+    \item Amount: \$20,000 % https://lsstdiscoveryalliance.org/programs/lincc-frameworks/incubators-call-proposals#:~:text=overview
+    \item Role: Co-Investigator (PI: Matthew Holman)
+    \item Period of Performance: 02/25 - 05/25
+\end{list_new}
+
+\section{\sc Teaching Experience}
+{\bf University of Illinois at Urbana-Champaign} \hfill Urbana, IL\\
+Instructor: Siegfried Eggl \hfill 08/21 - 12/21\\
+Teaching Assistant for AE 352: Aerospace Dynamical Systems
+\begin{list_new}
+    \item Assisted in developing and teaching the curriculum's core dynamics course with aerospace applications.
+    \item Covered Newtonian, Lagrangian, and Hamiltonian mechanics for rigid body motion.
+    \item Advised 16 student teams with Project Clear Constellation, focusing on new methods to remove orbital debris.
+\end{list_new}
+{\bf University of Illinois at Urbana-Champaign} \hfill Urbana, IL\\
+Instructor: Huy Tran \hfill 01/20 - 05/20\\
+Undergraduate Course Assistant for AE 199: Aerospace Computing
+\begin{list_new}
+    \item Assisted with grading for a new course focused on using Python to solve problems such as analyzing air traffic data and designing Martian landers.
+    \item Worked with instructor to augment course for a fully online learning environment without affecting students due to the COVID-19 pandemic.
+\end{list_new}
+
+\section{\sc Professional Activities and Affiliations}
+{\bf Mission Participation}
+\begin{list_new}
+    \item NASA Double Asteroid Redirection Test (DART) Mission Science Investigation Team Member
+    \item ESA Hera Mission Science Investigation Team Extended Member
+\end{list_new}
 
 {\bf Reviewer Activities}
 \begin{list_new}
@@ -238,11 +283,6 @@ ESA Hera Mission Science Team
     \item American Astronautical Society (AAS)
     \item American Institute of Aeronautics and Astronautics (AIAA)
 \end{list_new}
-
-\section{\sc Publications}
-\csuse{entrycount:1} Journal Articles\\
-\csuse{entrycount:2} Conference and Meeting Proceedings\\
-\csuse{entrycount:3} Invited Public Talks and Seminars
 
 \begin{refsection}[pub_journal.bib]
 \nocite{*}
@@ -267,7 +307,7 @@ ESA Hera Mission Science Team
 \begin{refsection}[pub_invited.bib]
 \nocite{*}
 \ifallpubs
-\section{\sc Invited Public Talks and Seminars}
+\section{\sc Invited Seminars and Public Talks}
 \vspace{0.15in}
 \printbibliography[heading=none]
 \else
