--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -1,3 +1,19 @@
+@INPROCEEDINGS{2025AGU,
+    author = {Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Brent W. Barbee and Siegfried Eggl},
+    title = "{Keyhole-Aware Target Site Selection for Kinetic Impact Missions to Near-Earth Asteroids}",
+    booktitle = "{2025 AGU Annual Meeting}",
+    year = 2025,
+    month = dec,
+}
+
+@INPROCEEDINGS{2025AGUb,
+    author = {Colin Orion Chandler and others},
+    title = "{Solar System Science with the NSF-DOE Vera C. Rubin Observatory: Overview and Results}",
+    booktitle = "{2025 AGU Annual Meeting}",
+    year = 2025,
+    month = dec,
+}
+
 @INPROCEEDINGS{2025BAM,
     author = {Rahil Makadia and Steven R. Chesley and Siegfried Eggl},
     title = "{Deflecting binary asteroids: Future considerations highlighted by the Didymos system’s heliocentric deflection after DART}",
