--- a/pdfs/cv/pub_invited.bib
+++ b/pdfs/cv/pub_invited.bib
@@ -1,3 +1,11 @@
+@INPROCEEDINGS{2025AGU,
+    author = {Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Brent W. Barbee and Siegfried Eggl},
+    title = "{Keyhole-Aware Target Site Selection for Kinetic Impact Missions to Near-Earth Asteroids}",
+    booktitle = "{2025 AGU Annual Meeting}",
+    year = 2025,
+    month = dec,
+}
+
 @INPROCEEDINGS{2025APLAsteroidDay,
     author = {Rahil Makadia},
     title = "{Didymos after DART: How the Binary Asteroid System Changed after the Deflection}",
