--- a/pdfs/cv/pub_journal.bib
+++ b/pdfs/cv/pub_journal.bib
@@ -1,16 +1,25 @@
 @article{Makadia2025e,
 	author = {Makadia, Rahil and Chesley, Steven R. and Farnocchia, Davide and Barbee, Brent W. and Eggl, Siegfried},
-	title = "{Keyhole-Aware Deflection Site Selection for Kinetic Impact Missions at Near-Earth Asteroids}",
+	title = "{Keyhole-Aware Target Site Selection for Kinetic Impact Missions to Near-Earth Asteroids}",
 	journal = {Icarus},
 	year = {2025},
-	volume = {Submitted},
+	volume = {Under review},
 }
 
 @article{Makadia2025d,
 	author = {Makadia, Rahil and Chesley, Steven R. and others},
-	title = "{First detection of an asteroid’s heliocentric deflection: The Didymos system after DART}",
+	title = "{Direct detection of an asteroid’s heliocentric deflection: The Didymos system after DART}",
+	journal = {Science Advances},
 	year = {2025},
-	volume = {Submitted},
+	volume = {Under review},
+}
+
+@article{Chandler2025,
+	title="{NSF-DOE Vera C. Rubin Observatory Observations of Interstellar Comet 3I/ATLAS (C/2025 N1)}",
+	author={Colin Orion Chandler and others},
+	year={2025},
+	journal={The Astrophysical Journal Letters},
+	volume={Under review},
 }
 
 @article{Makadia2025c,
