--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -2,6 +2,7 @@
     author = {Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Brent W. Barbee and Siegfried Eggl},
     title = "{Keyhole-Aware Target Site Selection for Kinetic Impact Missions to Near-Earth Asteroids}",
     booktitle = "{2025 AGU Annual Meeting}",
+    note = "{Invited}",
     year = 2025,
     month = dec,
 }
