--- a/pdfs/cv/pub_journal.bib
+++ b/pdfs/cv/pub_journal.bib
@@ -1,25 +1,28 @@
-@article{Makadia2025e,
-	author = {Makadia, Rahil and Chesley, Steven R. and Farnocchia, Davide and Barbee, Brent W. and Eggl, Siegfried},
-	title = "{Keyhole-Aware Target Site Selection for Kinetic Impact Missions to Near-Earth Asteroids}",
-	journal = {Icarus},
-	year = {2025},
-	volume = {Under review},
-}
-
-@article{Makadia2025d,
+@article{Makadia2026b,
 	author = {Makadia, Rahil and Chesley, Steven R. and others},
 	title = "{Direct detection of an asteroid’s heliocentric deflection: The Didymos system after DART}",
 	journal = {Science Advances},
-	year = {2025},
+	year = {2026},
 	volume = {Under review},
 }
 
-@article{Chandler2025,
+@article{Chandler2026,
 	title="{NSF-DOE Vera C. Rubin Observatory Observations of Interstellar Comet 3I/ATLAS (C/2025 N1)}",
 	author={Colin Orion Chandler and others},
-	year={2025},
+	year={2026},
 	journal={The Astrophysical Journal Letters},
 	volume={Under review},
+}
+
+@article{Makadia2026,
+title = "{Keyhole-aware target site selection for kinetic impact missions to near-Earth asteroids}",
+journal = {Icarus},
+volume = {447},
+pages = {116915},
+year = {2026},
+issn = {0019-1035},
+doi = {10.1016/j.icarus.2025.116915},
+author = {Rahil Makadia and Steven R. Chesley and Davide Farnocchia and Brent W. Barbee and Siegfried Eggl},
 }
 
 @article{Makadia2025c,
