--- a/pdfs/cv/cv.tex
+++ b/pdfs/cv/cv.tex
@@ -62,7 +62,7 @@
         \ifphone
         \input{phone.num}\\
         \fi
-        \href{mailto:makadia2@illinois.edu}{makadia2@illinois.edu}\\
+        \href{mailto:makadia2.uiuc@gmail.com}{makadia2.uiuc@gmail.com}\\
         \href{https://rahil-makadia.github.io/}{rahil-makadia.github.io}
     }
 }
@@ -128,7 +128,7 @@ Advisors: Steven Chesley, Davide Farnocchia
     \item Produced ability to compute locations of gravitational keyholes, which are predictors of future asteroid impacts with Earth.
     \item Wrote an efficient orbit propagator with sub\,-1\,km position accuracy over 250 years compared to JPL's orbit software.
     \item Developed an orbit determination submodule around the propagator with sub\,-\,1$\sigma$ agreement with JPL orbit solutions.
-    \item Released a publicly available Python package, \href{https://rahil-makadia.github.io/grss/}{\textsc{grss}}, to allow the planetary defense scientific community to to study solar system objects.
+    \item Released a publicly available Python package, \href{https://rahil-makadia.github.io/grss/}{\textsc{grss}}, to allow the planetary defense scientific community to study solar system objects.
 \end{list_new}
 {\bf NASA Goddard Space Flight Center} \hfill Greenbelt, MD\\
 Visiting Technologist \hfill 05/25 - 07/25\\
