--- a/pdfs/cv/pub_conf.bib
+++ b/pdfs/cv/pub_conf.bib
@@ -5,6 +5,7 @@
     note = "{Invited}",
     year = 2025,
     month = dec,
+    url = {https://agu.confex.com/agu/agu25/meetingapp.cgi/Paper/1861520},
 }
 
 @INPROCEEDINGS{2025AGUb,
@@ -13,6 +14,7 @@
     booktitle = "{2025 AGU Annual Meeting}",
     year = 2025,
     month = dec,
+    url = {https://agu.confex.com/agu/agu25/meetingapp.cgi/Paper/1921523},
 }
 
 @INPROCEEDINGS{2025BAM,
@@ -21,6 +23,7 @@
     booktitle = "{Binaries in the Solar System VI}",
     year = 2025,
     month = sep,
+    url = {https://bam-vi.sciencesconf.org/resource/page/id/3},
 }
 
 @INPROCEEDINGS{2025EPSCDPS,
@@ -29,6 +32,7 @@
     booktitle = "{Europlanet Science Congress - Division of Planetary Sciences Joint Meeting 2025}",
     year = 2025,
     month = sep,
+    url = {https://doi.org/10.5194/epsc-dps2025-77},
 }
 
 @INPROCEEDINGS{2025EPSCDPSb,
@@ -37,6 +41,7 @@
     booktitle = "{Europlanet Science Congress - Division of Planetary Sciences Joint Meeting 2025}",
     year = 2025,
     month = sep,
+    url = {https://doi.org/10.5194/epsc-dps2025-1331},
 }
 
 @INPROCEEDINGS{2025EPSCDPSc,
@@ -45,6 +50,7 @@
     booktitle = "{Europlanet Science Congress - Division of Planetary Sciences Joint Meeting 2025}",
     year = 2025,
     month = sep,
+    url = {https://doi.org/10.5194/epsc-dps2025-1390},
 }
 
 @INPROCEEDINGS{2025EPSCDPSd,
@@ -53,6 +59,7 @@
     booktitle = "{Europlanet Science Congress - Division of Planetary Sciences Joint Meeting 2025}",
     year = 2025,
     month = sep,
+    url = {https://doi.org/10.5194/epsc-dps2025-979},
 }
 
 @INPROCEEDINGS{2025PDC,
